--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "prerender-xs",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "license": "MIT",
+  "repository": "chybie/prerender-xs",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -12,6 +14,10 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "author": {
+    "name": "Jecelyn Yeen",
+    "url": "https://twitter.com/JecelynYeen"
+  },
   "dependencies": {
     "@angular/animations": "~8.2.4",
     "@angular/common": "~8.2.4",
